// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImpactView ME person impact view for user created org renders empty state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      Here you will see all the steps you have taken.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      You will see the steps other users have taken here shortly.

You will see how others have moved on their spiritual journey here shortly.
    </Text>
  </View>
</View>
`;

exports[`ImpactView ME person impact view for user created org renders plural state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, you have taken 10 steps of faith with 5 people.

3 people reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 200 users have taken 10 steps of faith with 5 people.

50 people reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView ME person impact view for user created org renders singular state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, you have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 1 users have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView ME person personal impact view renders empty state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      Here you will see all the steps you have taken.

See what God has done through you below.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      You will see the steps other users have taken here shortly.

You will see how others have moved on their spiritual journey here shortly.
    </Text>
  </View>
</View>
`;

exports[`ImpactView ME person personal impact view renders plural state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, you have taken 10 steps of faith with 5 people.

3 people reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 200 users have taken 10 steps of faith with 5 people.

50 people reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView ME person personal impact view renders singular state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, you have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 1 users have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView global community impact renders empty state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      Here you will see all the steps you have taken.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      You will see the steps other users have taken here shortly.

You will see how others have moved on their spiritual journey here shortly.
    </Text>
  </View>
</View>
`;

exports[`ImpactView global community impact renders plural state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, you have taken 10 steps of faith with 5 people.

3 people reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 200 users have taken 10 steps of faith with 5 people.

50 people reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView global community impact renders singular state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, you have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 1 users have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView user created member impact renders empty state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      Here you will see all the steps Test Fname has taken.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      You will see the steps other users have taken here shortly.

You will see how others have moved on their spiritual journey here shortly.
    </Text>
  </View>
</View>
`;

exports[`ImpactView user created member impact renders plural state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, Test Fname has taken 11 steps of faith with 6 people in their life.

4 people reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 200 users have taken 10 steps of faith with 5 people.

50 people reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView user created member impact renders singular state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, Test Fname has taken 1 step of faith with 1 person in their life.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 1 users have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView user-created community impact renders empty state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      Here you will see all the steps we have taken.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      You will see the steps other users have taken here shortly.

You will see how others have moved on their spiritual journey here shortly.
    </Text>
  </View>
</View>
`;

exports[`ImpactView user-created community impact renders plural state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      Together we have taken 13 steps of faith with 8 people in 2018.

6 people reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 200 users have taken 10 steps of faith with 5 people.

50 people reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;

exports[`ImpactView user-created community impact renders singular state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#3EB1C8",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#52C5DC",
          "paddingBottom": 10,
          "paddingTop": 30,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      Together we have taken 1 step of faith with 1 person in 2018.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/impactBackground.png",
      }
    }
    style={
      Object {
        "backgroundColor": "#52C5DC",
        "height": 410,
        "width": 750,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#3EB1C8",
          "paddingBottom": 40,
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 28,
            "width": 270,
          },
        ]
      }
    >
      In 2018, 1 users have taken 1 step of faith with 1 person.

1 person reached a new stage on their spiritual journey.
    </Text>
  </View>
</View>
`;
